--- a/lab4_UIzujian/app/src/main/res/layout/listview_item.xml
+++ b/lab4_UIzujian/app/src/main/res/layout/listview_item.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal">
     <TextView
         android:id="@+id/textview1"
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="60dp"
         android:textSize="30dp"
         android:gravity="left"
+        android:layout_alignParentLeft="true"
         />
 
     <ImageView
         android:id="@+id/imageview1"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
         />
-    </LinearLayout>
+    </RelativeLayout>
