--- a/lab4_UIzujian/app/src/main/res/layout/list_item.xml
+++ b/lab4_UIzujian/app/src/main/res/layout/list_item.xml
@@ -7,6 +7,7 @@
         android:id="@+id/image2"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:src="@drawable/cat"
 
         />
     <TextView
