time stamp but time no currect!

--- a/NotePad-master/app/src/main/res/layout/noteslist_item.xml
+++ b/NotePad-master/app/src/main/res/layout/noteslist_item.xml
@@ -22,25 +22,25 @@
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/text1"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:gravity="center_vertical"
         android:paddingLeft="5dip"
         android:singleLine="true"
+        android:textSize="30dp"
+
 
         />
 
     <TextView
         android:id="@+id/timestamp1"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="25dp"
+        android:textAlignment="center"
+        android:textSize="18dp"
+        android:gravity="center_vertical"
         android:text="这里放最近修改时间"
-        android:background="#FFFFFF"/>
-    <TextView
-        android:id="@+id/timestamp2"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:background="#FFFF00"/>
+        />
 
 </LinearLayout>
 
