--- a/NotePad-master/app/src/main/res/layout/mainlayout.xml
+++ b/NotePad-master/app/src/main/res/layout/mainlayout.xml
@@ -6,26 +6,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+        <EditText
+            android:id="@+id/editTextSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_weight="8"
+            android:background="@android:color/darker_gray"
+            android:textColor="#FFFFFF"
+            android:inputType="text"
+            android:paddingLeft="5dp"
+            android:hint="Enter title"
+            />
 
-    <EditText
-        android:id="@+id/editTextSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_weight="8"
-        android:background="@android:color/darker_gray"
-        android:textColor="#FFFFFF"
-        android:inputType="text"
-        android:paddingLeft="5dp"
-        android:hint="Enter title"
-        />
+        <Button
+            android:id="@+id/buttonSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="@string/button_search"
+            />
+    </LinearLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView">
 
-    <Button
-        android:id="@+id/buttonSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:text="@string/button_search"
-        />
+    </ListView>
 
 
 </LinearLayout>
