--- a/NotePad-master/app/src/main/res/menu/list_options_menu.xml
+++ b/NotePad-master/app/src/main/res/menu/list_options_menu.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--主页面的菜单选项-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!--  This is our one standard application action (creating a new note). -->
     <item android:id="@+id/menu_add"
